# abd3

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
abd3/: __init__.py  dataloader.py  diffusion.py  main.py  metrics.py  noise_schedule.py  tokenization_cache.py  utils.py
abd3/models/: __init__.py  attention.py  dit.py  ema.py
configs/: config.yaml  feasibility.yaml  phase4_wt103.yaml  phase5_owt_small.yaml
configs/algo/: abd3.yaml  baseline.yaml  rdr_only.yaml
configs/data/: openwebtext.yaml  wikitext103.yaml  wikitext2.yaml
configs/model/: dit_small.yaml  dit_tiny.yaml
configs/noise/: loglinear.yaml
configs/wandb_panels/: default.yaml
eval/: __init__.py  collect_results.py  diversity.py  efficiency.py  gen_ppl.py  generate.py  mauve.py  perplexity.py  quality.py  zero_shot.py
figures/: abd3_attention.drawio
scripts/: chain_phase5_after_phase4.sh  daily_autocommit.sh  eval.sh  retry_rdr_only.sh  run_all_experiments.sh  run_feasibility.sh  run_phase4_wt103.sh  run_phase5_owt.sh  run_training_pipeline.sh  train.sh  wait_for_gpus.sh
tests/: test_adaptive_stopping.py  test_collect_results.py  test_diversity.py  test_efficiency.py  test_ema_checkpoint.py  test_gen_ppl.py  test_generate.py  test_mauve.py  test_mixed_block_size.py  test_perplexity.py  test_quality.py  test_sampler.py  test_self_conditioning.py  test_tokenization_cache.py  test_two_stream.py  test_wandb_logging.py  test_zero_shot.py
tools/: _drawio_preview.py  _gif_preview.py  feasibility_summary.py  make_attention_drawio.py  make_block_diffusion_gif.py  smoke_run.py
